--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
   <head>
-    Write some stuff here
+    <title>Prime Academy HTLML & CSS</title>
   </head>
   <body>
     <h1>BIG BOLD MESSAGE</h1>
