--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Prime Academy HTLML & CSS</title>
   </head>
   <body>
+  <div>
     <h1>BIG BOLD MESSAGE</h1>
+  </div>
     <ul>
       <li>first item</li>
       <li>second item</li>
