--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <title>Prime Academy HTLML & CSS</title>
   </head>
   <body>
-    <div>
+    <header>
       <h1>BIG BOLD MESSAGE</h1>
-    </div>
-    <ul>
-      <li>first item</li>
-      <li>second item</li>
-      <li>final item</li>
-    </ul>
-    <p> Message </p>
-    <p> More content </p></p>
+    </header>
+    <nav>
+      <ul>
+        <li>first item</li>
+        <li>second item</li>
+        <li>final item</li>
+      </ul>
+    </nav>
+    
+    <main>
+      <p> Message </p>
+      <p> More content </p></p>
+    </main>
   </body>
 </html>
